--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <li>footer</li>
             </ul>
         </nav>
-        <sec id="o-nas">
+        <section id="o-nas">
             <p class="tekst">
 
             </p>
-        </sec>
-        <sec id="kontakt">
+        </section>
+        <section id="kontakt">
 
-        </sec>
-        <foot id="footer">
+        </section>
+        <footer id="footer">
             
-        </foot>
+        </footer>
 </body>
 </html>
